fixed spacing issue

--- a/static/styles/models.css
+++ b/static/styles/models.css
@@ -148,16 +148,16 @@ h4 {
 }
 
 
-+/* = Mobile Changes
+/* = Mobile Changes
  ------------------------*/
 
 @media only screen and (max-width: 800px){
   .box-table table{
-     font-size: 80%;
-   }
-   h1.h1 {
-     font-size: 150%;
-   }
+    font-size: 80%;
+  }
+  h1.h1 {
+    font-size: 150%;
+  }
 }
 /* = Error
 ------------------------*/
